# Iberian-Wildfire-Forecasting

./: .gitignore  2_mcd64a1_Burned_Area_Download.ipynb  3_Static_Layers_Download.ipynb  4_Building_Conditioning_Tensor.ipynb  5_Exploratory_Data_Analysis.ipynb  6_Baselines.ipynb  7_Deterministic_UNet_Baseline.ipynb  8_Diffusion_UNet_DDPM.ipynb  Burned_Area_Exploration.ipynb  CDS_Data_Download.ipynb  CDS_Data_Exploration.ipynb  Data_Download.ipynb  Data_Exploration.ipynb  README.md  Static_Layers_Download.ipynb  main.py  mcd64a1_Burned_Area_Download_and_Aggregate.ipynb  pyproject.toml
