[project]
name = "iberian-wildfire-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "matplotlib>=3.10.9",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "rioxarray>=0.22.0",
    "scoringrules>=0.9.0",
    "torch>=2.11.0",
    "xarray>=2026.4.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.6",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true